<resources>

<!--    Main screen-->
    <string name="app_name">Playlist Maker</string>



<!--    Setting screen-->
    <string name="settings">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="forward">Пользовательское соглашение</string>
    <string name="media">Медиатека</string>
    <string name="search">Поиск</string>


    <string name="email">aristova.natalya@gmail.com</string>
    <string name="subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="text_mail">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="link">https://practicum.yandex.ru/profile/android-developer</string>
    <string name="link_share">https://yandex.ru/legal/practicum_offer/</string>

<!--    Search screen-->
    <string name="error_server_text">Ничего не нашлось</string>
    <string name="error_internet_text">Проблемы со связью \n\ \n\ Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="button_update">Обновить</string>
    <string name="text_error_other">Возникла проблема на стороне клиента</string>

    <string name="text_search_hint">Вы искали</string>
    <string name="text_buton_clear_history">Очистить историю</string>

<!--    Audio player-->
    <string name="time_track">Длительность</string>
    <string name="album_track">Альбом</string>
    <string name="year_track">Год</string>
    <string name="genre_track">Жанр</string>
    <string name="country_track">Страна</string>

</resources>