<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/setting_layout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/back"
            style="@style/button_back"
            android:src="@drawable/back_button" />

        <TextView
            style="@style/textTop"
            android:text="@string/settings" />

    </LinearLayout>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/theme_switcher"
        style="@style/switch_style"
        android:gravity="left|center_vertical"
        android:text="@string/dark_theme" />

    <Button
        android:id="@+id/shareButton"
        style="@style/setting_button"
        android:drawableRight="@drawable/share"
        android:text="@string/share" />

    <Button
        android:id="@+id/supportButton"
        style="@style/setting_button"
        android:drawableRight="@drawable/support"
        android:text="@string/support" />

    <Button
        android:id="@+id/forwardButton"
        style="@style/setting_button"
        android:drawableRight="@drawable/arrow_forward"
        android:text="@string/forward" />

</LinearLayout>