<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    style="@style/main_layout" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/text_basic22"
        android:textStyle="bold" />

    <Button
        android:id="@+id/searchButton"
        style="@style/button_main"
        android:layout_marginTop="40dp"
        android:text="@string/search"
        app:cornerRadius="@dimen/button_radius"
        app:icon="@drawable/search"
        app:iconGravity="textStart" />

    <Button
        android:id="@+id/media"
        style="@style/button_main"
        android:text="@string/media"
        app:cornerRadius="@dimen/button_radius"
        app:icon="@drawable/media"
        app:iconGravity="textStart" />

    <Button
        android:id="@+id/settings"
        style="@style/button_main"
        android:text="@string/settings"
        app:cornerRadius="@dimen/button_radius"
        app:icon="@drawable/settings"
        app:iconGravity="textStart" />

</LinearLayout>